库/XCGUI/xcgui.h

typedef  __int64  vint;
typedef  int      vint;
typedef void* HXCGUI;       
struct  listView_item_id_
{
	int  iGroup;   
	int  iItem;    
};
XC_API void WINAPI XList_SetSelectAll(HELE hEle);
XC_API int WINAPI XList_GetSelectAll(HELE hEle, int* pArray, int nArraySize);
XC_API void WINAPI XList_CancelSelectAll(HELE hEle);
XC_API HELE WINAPI XList_GetHeaderHELE(HELE hEle);
XC_API void WINAPI XList_BindAdapter(HELE hEle, HXCGUI hAdapter);
XC_API void WINAPI XList_BindAdapterHeader(HELE hEle, HXCGUI hAdapter);
XC_API HXCGUI WINAPI XList_CreateAdapter(HELE hEle, int col_extend_count=3);
XC_API HXCGUI WINAPI XList_CreateAdapterHeader(HELE hEle);
XC_API HXCGUI WINAPI XList_GetAdapter(HELE hEle);
XC_API HXCGUI WINAPI XList_GetAdapterHeader(HELE hEle);
XC_API BOOL WINAPI XList_SetItemTemplateXML(HELE hEle, const wchar_t* pXmlFile);
XC_API BOOL WINAPI XList_SetItemTemplateXMLFromString(HELE hEle, const char* pStringXML);
XC_API BOOL WINAPI XList_SetItemTemplate(HELE hEle, HTEMP hTemp);
XC_API HXCGUI WINAPI XList_GetTemplateObject(HELE hEle, int iRow, int iColumn, int nTempItemID);
XC_API HXCGUI WINAPI XList_GetHeaderTemplateObject(HELE hEle, int iColumn, int nTempItemID);
XC_API void WINAPI XList_SetHeaderHeight(HELE hEle, int height);
XC_API int WINAPI XList_GetHeaderHeight(HELE hEle);
XC_API void WINAPI XList_GetVisibleRowRange(HELE hEle, int* piStart, int* piEnd);
XC_API void WINAPI XList_SetRowSpace(HELE hEle, int nSpace);
XC_API int WINAPI XList_GetRowSpace(HELE hEle);
XC_API void WINAPI XList_SetLockColumnLeft(HELE hEle, int iColumn);
XC_API void WINAPI XList_SetLockColumnRight(HELE hEle, int iColumn);
XC_API void WINAPI XList_SetLockRowBottom(HELE hEle, BOOL bLock);
XC_API void WINAPI XList_SetLockRowBottomOverlap(HELE hEle, BOOL bOverlap);
XC_API BOOL WINAPI XList_HitTest(HELE hEle, POINT* pPt, int* piRow, int* piColumn);
XC_API BOOL WINAPI XList_HitTestOffset(HELE hEle, POINT* pPt, int* piRow, int* piColumn);
XC_API void WINAPI XList_RefreshData(HELE hEle);
XC_API int WINAPI XList_AddColumnText(HELE hEle, int nWidth, const wchar_t* pName, const wchar_t* pText);
XC_API int WINAPI XList_AddColumnImage(HELE hEle, int nWidth, const wchar_t* pName, HIMAGE hImage);
XC_API BOOL WINAPI XList_SetItemText(HELE hEle, int iRow, int iColumn, const wchar_t* pText);
XC_API BOOL WINAPI XList_SetItemTextEx(HELE hEle, int iRow, const wchar_t* pName, const wchar_t* pText);
XC_API BOOL WINAPI XList_SetItemImage(HELE hEle, int iRow, int iColumn, HIMAGE hImage);
XC_API BOOL WINAPI XList_SetItemImageEx(HELE hEle, int iRow, const wchar_t* pName, HIMAGE hImage);
XC_API BOOL WINAPI XList_SetItemInt(HELE hEle, int iRow, int iColumn, int nValue);
XC_API BOOL WINAPI XList_SetItemIntEx(HELE hEle, int iRow, const wchar_t* pName, int nValue);
XC_API BOOL WINAPI XList_SetItemFloat(HELE hEle, int iRow, int iColumn, float fFloat);
XC_API BOOL WINAPI XList_SetItemFloatEx(HELE hEle, int iRow, const wchar_t* pName, float fFloat);
XC_API const wchar_t* WINAPI XList_GetItemText(HELE hEle, int iRow, int iColumn);
XC_API const wchar_t* WINAPI XList_GetItemTextEx(HELE hEle, int iRow, const wchar_t* pName);
XC_API HIMAGE WINAPI XList_GetItemImage(HELE hEle, int iRow, int iColumn);
XC_API HIMAGE WINAPI XList_GetItemImageEx(HELE hEle, int iRow, const wchar_t* pName);
XC_API BOOL WINAPI XList_GetItemInt(HELE hEle, int iRow, int iColumn, int* pOutValue);
XC_API BOOL WINAPI XList_GetItemIntEx(HELE hEle, int iRow, const wchar_t* pName, int* pOutValue);
XC_API BOOL WINAPI XList_GetItemFloat(HELE hEle, int iRow, int iColumn, float* pOutValue);
XC_API BOOL WINAPI XList_GetItemFloatEx(HELE hEle, int iRow, const wchar_t* pName, float* pOutValue);
XC_API void WINAPI XList_DeleteColumnAll_AD(HELE hEle);
XC_API int WINAPI XList_GetCount_AD(HELE hEle);
XC_API int WINAPI XList_GetCountColumn_AD(HELE hEle);
XC_API HELE WINAPI XListView_Create(int x, int y, int cx, int cy, HXCGUI hParent=NULL);
XC_API HXCGUI WINAPI XListView_CreateAdapter(HELE hEle);
XC_API void WINAPI XListView_BindAdapter(HELE hEle, HXCGUI hAdapter);
XC_API HXCGUI WINAPI XListView_GetAdapter(HELE hEle);
XC_API BOOL WINAPI XListView_SetItemTemplateXML(HELE hEle, const wchar_t* pXmlFile);
XC_API BOOL WINAPI XListView_SetItemTemplateXMLFromString(HELE hEle, const char* pStringXML);
XC_API BOOL WINAPI XListView_SetItemTemplate(HELE hEle, HTEMP hTemp);
XC_API HXCGUI WINAPI XListView_GetTemplateObject(HELE hEle, int iGroup, int iItem, int nTempItemID);
XC_API HXCGUI WINAPI XListView_GetTemplateObjectGroup(HELE hEle, int iGroup, int nTempItemID);
XC_API BOOL WINAPI XListView_GetItemIDFromHXCGUI(HELE hEle, HXCGUI hXCGUI, int* piGroup, int* piItem);
XC_API BOOL WINAPI XListView_HitTest(HELE hEle, POINT* pPt, int* pOutGroup, int* pOutItem);
XC_API BOOL WINAPI XListView_HitTestOffset(HELE hEle, POINT* pPt, int* pOutGroup, int* pOutItem);
XC_API void WINAPI XListView_EnableMultiSel(HELE hEle, BOOL bEnable);
XC_API void WINAPI XListView_EnableTemplateReuse(HELE hEle, BOOL bEnable);
XC_API void WINAPI XListView_EnableVirtualTable(HELE hEle, BOOL bEnable);
XC_API BOOL WINAPI XListView_SetVirtualItemCount(HELE hEle, int iGroup, int nCount);
XC_API void WINAPI XListView_SetDrawItemBkFlags(HELE hEle, int nFlags);
XC_API BOOL WINAPI XListView_SetSelectItem(HELE hEle, int iGroup, int iItem);
XC_API BOOL WINAPI XListView_GetSelectItem(HELE hEle, int* piGroup, int* piItem);
XC_API BOOL WINAPI XListView_AddSelectItem(HELE hEle, int iGroup, int iItem);
XC_API void WINAPI XListView_VisibleItem(HELE hEle, int iGroup, int iItem);
XC_API void WINAPI XListView_GetVisibleItemRange(HELE hEle, int* piGroup1, int* piGroup2, int* piStartGroup, int* piStartItem, int* piEndGroup, int* piEndItem);
XC_API int WINAPI XListView_GetSelectItemCount(HELE hEle);
XC_API int WINAPI XListView_GetSelectAll(HELE hEle, listView_item_id_* pArray, int nArraySize);
XC_API void WINAPI XListView_SetSelectAll(HELE hEle);
XC_API void WINAPI XListView_CancelSelectAll(HELE hEle);
XC_API void WINAPI XListView_SetColumnSpace(HELE hEle, int space);
XC_API void WINAPI XListView_SetRowSpace(HELE hEle, int space);
XC_API void WINAPI XListView_SetItemSize(HELE hEle, int width, int height);
XC_API void WINAPI XListView_GetItemSize(HELE hEle, SIZE* pSize);
XC_API void WINAPI XListView_SetGroupHeight(HELE hEle, int height);
XC_API int WINAPI XListView_GetGroupHeight(HELE hEle);
XC_API void WINAPI XListView_SetGroupUserData(HELE hEle, int iGroup, vint nData);
XC_API void WINAPI XListView_SetItemUserData(HELE hEle, int iGroup, int iItem, vint nData);
XC_API vint WINAPI XListView_GetGroupUserData(HELE hEle, int iGroup);
XC_API vint WINAPI XListView_GetItemUserData(HELE hEle, int iGroup, int iItem);
XC_API void WINAPI XListView_RefreshData(HELE hEle);
XC_API void WINAPI XListView_RefreshItem(HELE hEle, int iGroup, int iItem);
XC_API BOOL WINAPI XListView_ExpandGroup(HELE hEle, int iGroup, BOOL bExpand);
XC_API int WINAPI XListView_Group_AddColumn(HELE hEle, const wchar_t* pName);
XC_API int WINAPI XListView_Group_AddItemText(HELE hEle, const wchar_t* pValue, int iPos);