库/XCGUI/XCGUI.pas


function XList_GetSelectItemCount(hEle: HELE): Integer; stdcall; external XCGUI_DLL;

function XList_AddSelectItem(hEle: HELE; iItem: Integer): BOOL; stdcall; external XCGUI_DLL;

procedure XList_SetSelectAll(hEle: HELE); stdcall; external XCGUI_DLL;

function XList_GetSelectAll(hEle: HELE; pArray: vint; nArraySize: Integer): Integer; stdcall; external XCGUI_DLL;

procedure XList_VisibleItem(hEle: HELE; iItem: Integer); stdcall; external XCGUI_DLL;

function XList_CancelSelectItem(hEle: HELE; iItem: Integer): BOOL; stdcall; external XCGUI_DLL;

procedure XList_CancelSelectAll(hEle: HELE); stdcall; external XCGUI_DLL;

function XList_GetHeaderHELE(hEle: HELE): HELE; stdcall; external XCGUI_DLL;

procedure XList_BindAdapter(hEle: HELE; hAdapter: HXCGUI); stdcall; external XCGUI_DLL;

procedure XList_BindAdapterHeader(hEle: HELE; hAdapter: HXCGUI); stdcall; external XCGUI_DLL;

function XList_CreateAdapter(hEle: HELE; col_extend_count: Integer = 3): HXCGUI; stdcall; external XCGUI_DLL;

function XList_CreateAdapterHeader(hEle: HELE): HXCGUI; stdcall; external XCGUI_DLL;

function XList_GetAdapter(hEle: HELE): HXCGUI; stdcall; external XCGUI_DLL;

function XList_GetAdapterHeader(hEle: HELE): HXCGUI; stdcall; external XCGUI_DLL;

function XList_SetItemTemplateXML(hEle: HELE; pXmlFile: PWideChar): BOOL; stdcall; external XCGUI_DLL;

function XList_SetItemTemplateXMLFromString(hEle: HELE; pStringXML: PAnsiChar): BOOL; stdcall; external XCGUI_DLL;

function XList_SetItemTemplate(hEle: HELE; hTemp: HTEMP): BOOL; stdcall; external XCGUI_DLL;

function XList_GetTemplateObject(hEle: HELE; iItem: Integer; iSubItem: Integer; nTempItemID: Integer): HXCGUI; stdcall; external XCGUI_DLL;

function XList_GetItemIndexFromHXCGUI(hEle: HELE; hXCGUI: HXCGUI): Integer; stdcall; external XCGUI_DLL;

function XList_GetHeaderTemplateObject(hEle: HELE; iItem: Integer; nTempItemID: Integer): HXCGUI; stdcall; external XCGUI_DLL;

function XList_GetHeaderItemIndexFromHXCGUI(hEle: HELE; hXCGUI: HXCGUI): Integer; stdcall; external XCGUI_DLL;

procedure XList_SetHeaderHeight(hEle: HELE; height: Integer); stdcall; external XCGUI_DLL;

function XList_GetHeaderHeight(hEle: HELE): Integer; stdcall; external XCGUI_DLL;

procedure XList_GetVisibleRowRange(hEle: HELE; out piStart: Integer; out piEnd: Integer); stdcall; external XCGUI_DLL;

procedure XList_SetItemHeightDefault(hEle: HELE; nHeight: Integer; nSelHeight: Integer); stdcall; external XCGUI_DLL;

procedure XList_GetItemHeightDefault(hEle: HELE; out pHeight: Integer; out pSelHeight: Integer); stdcall; external XCGUI_DLL;

procedure XList_SetRowSpace(hEle: HELE; nSpace: Integer); stdcall; external XCGUI_DLL;

function XList_GetRowSpace(hEle: HELE): Integer; stdcall; external XCGUI_DLL;

procedure XList_SetLockColumnLeft(hEle: HELE; iColumn: Integer); stdcall; external XCGUI_DLL;

procedure XList_SetLockColumnRight(hEle: HELE; iColumn: Integer); stdcall; external XCGUI_DLL;

procedure XList_SetLockRowBottom(hEle: HELE; bLock: BOOL); stdcall; external XCGUI_DLL;

procedure XList_SetLockRowBottomOverlap(hEle: HELE; bOverlap: BOOL); stdcall; external XCGUI_DLL;

function XList_HitTest(hEle: HELE; pPt: PPoint; out piItem: Integer; out piSubItem: Integer): BOOL; stdcall; external XCGUI_DLL;

function XList_HitTestOffset(hEle: HELE; pPt: PPoint; out piItem: Integer; out piSubItem: Integer): BOOL; stdcall; external XCGUI_DLL;

procedure XList_RefreshData(hEle: HELE); stdcall; external XCGUI_DLL;

procedure XList_RefreshItem(hEle: HELE; iItem: Integer); stdcall; external XCGUI_DLL;

function XList_AddColumnText(hEle: HELE; nWidth: Integer; pName: PWideChar; pText: PWideChar): Integer; stdcall; external XCGUI_DLL;

function XList_AddColumnImage(hEle: HELE; nWidth: Integer; pName: PWideChar; hImage: HIMAGE): Integer; stdcall; external XCGUI_DLL;

function XList_AddItemText(hEle: HELE; pText: PWideChar): Integer; stdcall; external XCGUI_DLL;

function XList_AddItemTextEx(hEle: HELE; pName: PWideChar; pText: PWideChar): Integer; stdcall; external XCGUI_DLL;

function XList_AddItemImage(hEle: HELE; hImage: HIMAGE): Integer; stdcall; external XCGUI_DLL;

function XList_AddItemImageEx(hEle: HELE; pName: PWideChar; hImage: HIMAGE): Integer; stdcall; external XCGUI_DLL;

function XList_InsertItemText(hEle: HELE; iItem: Integer; pValue: PWideChar): Integer; stdcall; external XCGUI_DLL;

function XList_InsertItemTextEx(hEle: HELE; iItem: Integer; pName: PWideChar; pValue: PWideChar): Integer; stdcall; external XCGUI_DLL;

function XList_InsertItemImage(hEle: HELE; iItem: HELE; hImage: HIMAGE): Integer; stdcall; external XCGUI_DLL;

function XList_InsertItemImageEx(hEle: HELE; iItem: Integer; pName: PWideChar; hImage: HIMAGE): Integer; stdcall; external XCGUI_DLL;

function XList_SetItemText(hEle: HELE; iItem: Integer; iColumn: Integer; pText: PWideChar): BOOL; stdcall; external XCGUI_DLL;

function XList_SetItemTextEx(hEle: HELE; iItem: Integer; pName: PWideChar; pText: PWideChar): BOOL; stdcall; external XCGUI_DLL;

function XList_SetItemImage(hEle: HELE; iItem: Integer; iColumn: Integer; hImage: HIMAGE): BOOL; stdcall; external XCGUI_DLL;

function XList_SetItemImageEx(hEle: HELE; iItem: Integer; pName: PWideChar; hImage: HIMAGE): BOOL; stdcall; external XCGUI_DLL;

function XList_SetItemInt(hEle: HELE; iItem: Integer; iColumn: Integer; nValue: Integer): BOOL; stdcall; external XCGUI_DLL;

function XList_SetItemIntEx(hEle: HELE; iItem: Integer; pName: PWideChar; nValue: Integer): BOOL; stdcall; external XCGUI_DLL;

function XList_SetItemFloat(hEle: HELE; iItem: Integer; iColumn: Integer; fFloat: Single): BOOL; stdcall; external XCGUI_DLL;

function XList_SetItemFloatEx(hEle: HELE; iItem: HELE; pName: PWideChar; fFloat: Single): BOOL; stdcall; external XCGUI_DLL;

function XList_GetItemText(hEle: HELE; iItem: Integer; iColumn: Integer): PWideChar; stdcall; external XCGUI_DLL;

function XList_GetItemTextEx(hEle: HELE; iItem: Integer; pName: PWideChar): PWideChar; stdcall; external XCGUI_DLL;

function XList_GetItemImage(hEle: HELE; iItem: Integer; iColumn: Integer): HIMAGE; stdcall; external XCGUI_DLL;

function XList_GetItemImageEx(hEle: HELE; iItem: Integer; pName: PWideChar): HIMAGE; stdcall; external XCGUI_DLL;

function XList_GetItemInt(hEle: HELE; iItem: Integer; iColumn: Integer; out pOutValue: Integer): BOOL; stdcall; external XCGUI_DLL;

function XList_GetItemIntEx(hEle: HELE; iItem: Integer; pName: PWideChar; out pOutValue: Integer): BOOL; stdcall; external XCGUI_DLL;

function XList_GetItemFloat(hEle: HELE; iItem: Integer; iColumn: Integer; out pOutValue: Single): BOOL; stdcall; external XCGUI_DLL;

function XList_GetItemFloatEx(hEle: HELE; iItem: Integer; pName: PWideChar; out pOutValue: Single): BOOL; stdcall; external XCGUI_DLL;

function XList_DeleteItem(hEle: HELE; iItem: Integer): BOOL; stdcall; external XCGUI_DLL;

function XList_DeleteItemEx(hEle: HELE; iItem: Integer; nCount: Integer): BOOL; stdcall; external XCGUI_DLL;

procedure XList_DeleteItemAll(hEle: HELE); stdcall; external XCGUI_DLL;

procedure XList_DeleteColumnAll_AD(hEle: HELE); stdcall; external XCGUI_DLL;

function XList_GetCount_AD(hEle: HELE): Integer; stdcall; external XCGUI_DLL;

function XList_GetCountColumn_AD(hEle: HELE): Integer; stdcall; external XCGUI_DLL;

function XListView_Create(x: Integer; y: Integer; cx: Integer; cy: Integer; hParent: HXCGUI = 0): HELE; stdcall; external XCGUI_DLL;

function XListView_CreateAdapter(hEle: HELE): HXCGUI; stdcall; external XCGUI_DLL;

procedure XListView_BindAdapter(hEle: HELE; hAdapter: HXCGUI); stdcall; external XCGUI_DLL;

function XListView_GetAdapter(hEle: HELE): HXCGUI; stdcall; external XCGUI_DLL;

function XListView_SetItemTemplateXML(hEle: HELE; pXmlFile: PWideChar): BOOL; stdcall; external XCGUI_DLL;

function XListView_SetItemTemplateXMLFromString(hEle: HELE; pStringXML: PAnsiChar): BOOL; stdcall; external XCGUI_DLL;

function XListView_SetItemTemplate(hEle: HELE; hTemp: HTEMP): BOOL; stdcall; external XCGUI_DLL;

function XListView_GetTemplateObject(hEle: HELE; iGroup: Integer; iItem: Integer; nTempItemID: Integer): HXCGUI; stdcall; external XCGUI_DLL;

function XListView_GetTemplateObjectGroup(hEle: HELE; iGroup: Integer; nTempItemID: Integer): HXCGUI; stdcall; external XCGUI_DLL;

function XListView_GetItemIDFromHXCGUI(hEle: HELE; hXCGUI: HXCGUI; out piGroup: Integer; out piItem: Integer): BOOL; stdcall; external XCGUI_DLL;

function XListView_HitTest(hEle: HELE; pPt: TPoint; out pOutGroup: Integer; out pOutItem: Integer): BOOL; stdcall; external XCGUI_DLL;

function XListView_HitTestOffset(hEle: HELE; var pPt: TPoint; out pOutGroup: Integer; out pOutItem: Integer): BOOL; stdcall; external XCGUI_DLL;

procedure XListView_EnableMultiSel(hEle: HELE; bEnable: BOOL); stdcall; external XCGUI_DLL;

procedure XListView_EnableTemplateReuse(hEle: HELE; bEnable: BOOL); stdcall; external XCGUI_DLL;

procedure XListView_EnableVirtualTable(hEle: HELE; bEnable: BOOL); stdcall; external XCGUI_DLL;

function XListView_SetVirtualItemCount(hEle: HELE; iGroup: Integer; nCount: Integer): BOOL; stdcall; external XCGUI_DLL;

procedure XListView_SetDrawItemBkFlags(hEle: HELE; nFlags: Integer); stdcall; external XCGUI_DLL;

function XListView_SetSelectItem(hEle: HELE; iGroup: Integer; iItem: Integer): BOOL; stdcall; external XCGUI_DLL;

function XListView_GetSelectItem(hEle: HELE; out piGroup: Integer; out piItem: Integer): BOOL; stdcall; external XCGUI_DLL;

function XListView_AddSelectItem(hEle: HELE; iGroup: Integer; iItem: Integer): BOOL; stdcall; external XCGUI_DLL;

procedure XListView_VisibleItem(hEle: HELE; iGroup: Integer; iItem: Integer); stdcall; external XCGUI_DLL;

procedure XListView_GetVisibleItemRange(hEle: HELE; out piGroup1: Integer; out piGroup2: Integer; out piStartGroup: Integer; out piStartItem: Integer; out piEndGroup: Integer; out piEndItem: Integer); stdcall; external XCGUI_DLL;

function XListView_GetSelectItemCount(hEle: HELE): Integer; stdcall; external XCGUI_DLL;

function XListView_GetSelectAll(hEle: HELE; pArray: vint; nArraySize: Integer): Integer; stdcall; external XCGUI_DLL;

procedure XListView_SetSelectAll(hEle: HELE); stdcall; external XCGUI_DLL;

procedure XListView_CancelSelectAll(hEle: HELE); stdcall; external XCGUI_DLL;

procedure XListView_SetColumnSpace(hEle: HELE; space: Integer); stdcall; external XCGUI_DLL;

procedure XListView_SetRowSpace(hEle: HELE; space: Integer); stdcall; external XCGUI_DLL;

procedure XListView_SetItemSize(hEle: HELE; width: Integer; height: Integer); stdcall; external XCGUI_DLL;

procedure XListView_GetItemSize(hEle: HELE; width: Integer; height: Integer); stdcall; overload; external XCGUI_DLL;

procedure XListView_GetItemSize(hEle: HELE; out pSize: TSize); stdcall; overload; external XCGUI_DLL;

procedure XListView_SetGroupHeight(hEle: HELE; height: Integer); stdcall; external XCGUI_DLL;

function XListView_GetGroupHeight(hEle: HELE): Integer; stdcall; external XCGUI_DLL;

procedure XListView_SetGroupUserData(hEle: HELE; iGroup: Integer; nData: vint); stdcall; external XCGUI_DLL;

procedure XListView_SetItemUserData(hEle: HELE; iGroup: Integer; iItem: Integer; nData: vint); stdcall; external XCGUI_DLL;

function XListView_GetGroupUserData(hEle: HELE; iGroup: Integer): vint; stdcall; external XCGUI_DLL;

function XListView_GetItemUserData(hEle: HELE; iGroup: Integer; iItem: Integer): vint; stdcall; external XCGUI_DLL;

procedure XListView_RefreshData(hEle: HELE); stdcall; external XCGUI_DLL;

procedure XListView_RefreshItem(hEle: HELE; iGroup: Integer; iItem: Integer); stdcall; external XCGUI_DLL;

function XListView_ExpandGroup(hEle: HELE; iGroup: Integer; bExpand: BOOL): BOOL; stdcall; external XCGUI_DLL;

function XListView_Group_AddColumn(hEle: HELE; pName: PWideChar): Integer; stdcall; external XCGUI_DLL;

function XListView_Group_AddItemText(hEle: HELE; pValue: PWideChar; iPos: Integer): Integer; stdcall; external XCGUI_DLL;
